--- a/Task_6/translations/fr/LC_MESSAGES/messages.po
+++ b/Task_6/translations/fr/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-12-07 19:45+0530\n"
-"PO-Revision-Date: 2020-12-07 19:45+0530\n"
+"POT-Creation-Date: 2020-12-07 21:09+0530\n"
+"PO-Revision-Date: 2020-12-07 21:09+0530\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
 "Language-Team: fr <LL@li.org>\n"
@@ -24,7 +24,7 @@ msgstr "Texte du cas"
 
 #: forms.py:7
 msgid "Enter service(s) requested, background information and assessment (if any)"
-msgstr "Entrez le service(s) demandé, les informations générales et l'évaluation (si seulement)"
+msgstr "Entrez les service(s) demandés, les informations générales et l'évaluation (si seulement)"
 
 #: forms.py:9
 msgid "File"
@@ -33,6 +33,10 @@ msgstr "Fichier"
 #: forms.py:9
 msgid "Upload a case file or supplementary document"
 msgstr "Télécharger un dossier ou un document supplémentaire"
+
+#: forms.py:9
+msgid "txt file only"
+msgstr "txt fichier uniquement"
 
 #: forms.py:11
 msgid "Submit"
