--- a/Task_6/translations/ko/LC_MESSAGES/messages.po
+++ b/Task_6/translations/ko/LC_MESSAGES/messages.po
@@ -1,17 +1,18 @@
-# Translations template for PROJECT.
+# Korean translations for PROJECT.
 # Copyright (C) 2020 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-12-07 20:29-0500\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"POT-Creation-Date: 2020-12-07 21:09+0530\n"
+"PO-Revision-Date: 2020-12-07 20:28-0500\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: ko\n"
+"Language-Team: ko <LL@li.org>\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,105 +20,105 @@ msgstr ""
 
 #: forms.py:8
 msgid "Case Text"
-msgstr ""
+msgstr "사건 내용"
 
 #: forms.py:8
 msgid "Enter service(s) requested, background information and assessment (if any)"
-msgstr ""
+msgstr "요구사항, 사건 뒷배경, 진단결과 (있을 경우) 등을 입력해주세요"
 
 #: forms.py:10
 msgid "File"
-msgstr ""
+msgstr "파일"
 
 #: forms.py:10
 msgid "Upload a case file or supplementary document"
-msgstr ""
+msgstr "케이스파일 또는 참고자료 (있을 경우) 업로드해주세요"
 
 #: forms.py:10
-msgid "txt file only"
-msgstr ""
+msgid ".txt file only"
+msgstr ".txt 파일만 가능"
 
 #: forms.py:12
 msgid "Submit"
-msgstr ""
+msgstr "결과보기"
 
 #: forms.py:15
 msgid "Show open cases only"
-msgstr ""
+msgstr "진행 중인 사건만 보기"
 
 #: forms.py:15
 msgid "Show closed cases only"
-msgstr ""
+msgstr "종료된 사건만 보기"
 
 #: forms.py:15
 msgid "Show both open and closed cases"
-msgstr ""
+msgstr "모든 사건 보기"
 
 #: forms.py:17
 msgid "Show a case by case number"
-msgstr ""
+msgstr "사건 번호로 찾기"
 
 #: forms.py:19
 msgid "Show cases that opened on or after this date"
-msgstr ""
+msgstr "입력된 날짜 이후에 열린 사건만 보기"
 
 #: forms.py:19 forms.py:21
 msgid "Please follow this format: YYYY-MM-DD"
-msgstr ""
+msgstr "다음과 같은 형식으로 입력해주세요: 년년년년-월월-일일"
 
 #: forms.py:21
 msgid "Show cases that closed on or before this date, if closed"
-msgstr ""
+msgstr "입력된 날짜 이전에 닫힌 사건만 보기"
 
 #: forms.py:23
 msgid "Show cases where service is requested in this country"
-msgstr ""
+msgstr "입력된 국가에서 진행된 사건만 보기"
 
 #: forms.py:25
 msgid "Show cases where the following service is requested"
-msgstr ""
+msgstr "입력된 서비스가 요청된 사건만 보기"
 
 #: forms.py:25
 msgid "Child Protection"
-msgstr ""
+msgstr "아동 보호"
 
 #: forms.py:25
 msgid "Children on the Move"
-msgstr ""
+msgstr "이민 아동"
 
 #: forms.py:27
 msgid "Show cases that contain these words"
-msgstr ""
+msgstr "입력된 단어를 원문에 포함하고 있는 사건만 보기"
 
 #: forms.py:27
 msgid "Please separate words with a comma"
-msgstr ""
+msgstr "여러 단어인 경우 단어 사이에 쉼표를 입력해주세요"
 
 #: forms.py:29
 msgid "Show high risk cases only"
-msgstr ""
+msgstr "고위험 사건만 보기"
 
 #: forms.py:29
 msgid "High risk cases have risk score of or over 0.75"
-msgstr ""
+msgstr "고위험 사건은 0.75 이상의 위험 지수를 보여줍니다"
 
 #: forms.py:31
 msgid "Search"
-msgstr ""
+msgstr "검색"
 
-#: templates/case.html:18
+#: templates/case.html:15
 msgid "Enter case information"
-msgstr ""
+msgstr "사건 내용을 입력해주세요"
 
-#: templates/query.html:18 templates/query.html:19
+#: templates/query.html:15 templates/query.html:16
 msgid "View all cases"
-msgstr ""
+msgstr "모든 사건 보기"
 
-#: templates/query.html:21
+#: templates/query.html:18
 msgid "Filter cases by features"
-msgstr ""
+msgstr "검색결과 필터링하기"
 
-#: templates/query.html:22
+#: templates/query.html:19
 msgid "Fill out as many criteria as needed"
-msgstr ""
+msgstr "원하는만큼 검색조건을 입력해주세요"
 
