--- a/Task_6/translations/ko/LC_MESSAGES/messages.po
+++ b/Task_6/translations/ko/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-12-07 21:09+0530\n"
-"PO-Revision-Date: 2020-12-07 20:28-0500\n"
+"POT-Creation-Date: 2020-12-07 21:03-0500\n"
+"PO-Revision-Date: 2020-12-07 21:03-0500\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: ko\n"
 "Language-Team: ko <LL@li.org>\n"
@@ -18,9 +18,13 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.0\n"
 
-#: forms.py:8
+#: forms.py:8 templates/result.html:7
 msgid "Case Text"
 msgstr "사건 내용"
+
+#: forms.py:8
+msgid "Enter service(s) requested, background information and assessment (if any)"
+msgstr ""
 
 #: forms.py:8
 msgid "Enter service(s) requested, background information and assessment (if any)"
@@ -40,7 +44,7 @@ msgstr ".txt 파일만 가능"
 
 #: forms.py:12
 msgid "Submit"
-msgstr "결과보기"
+msgstr "결과 보기"
 
 #: forms.py:15
 msgid "Show open cases only"
@@ -106,19 +110,47 @@ msgstr "고위험 사건은 0.75 이상의 위험 지수를 보여줍니다"
 msgid "Search"
 msgstr "검색"
 
-#: templates/case.html:15
+#: templates/case.html:19
 msgid "Enter case information"
 msgstr "사건 내용을 입력해주세요"
 
-#: templates/query.html:15 templates/query.html:16
+#: templates/query.html:19 templates/query.html:20
 msgid "View all cases"
 msgstr "모든 사건 보기"
 
-#: templates/query.html:18
+#: templates/query.html:22
 msgid "Filter cases by features"
 msgstr "검색결과 필터링하기"
 
-#: templates/query.html:19
+#: templates/query.html:23
 msgid "Fill out as many criteria as needed"
 msgstr "원하는만큼 검색조건을 입력해주세요"
+
+#: templates/result.html:4
+msgid "View Result"
+msgstr "결과 보기"
+
+#: templates/result.html:11
+msgid "Case Summary"
+msgstr "사건 요약"
+
+#: templates/result.html:15
+msgid "Keywords"
+msgstr "키워드"
+
+#: templates/result.html:19
+msgid "Risk Score"
+msgstr "위험 지수"
+
+#: templates/result.html:23
+msgid "Abuse Types"
+msgstr "폭력 유형"
+
+#: templates/result.html:27
+msgid "Similar Cases"
+msgstr "유사 사건들"
+
+#: templates/result.html:31
+msgid "Translation in [enter language here]"
+msgstr "사건 번역"
 
